--- a/products.html
+++ b/products.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/headerfooter.css">
     <link rel="stylesheet" href="assets/css/responsivenavbar.css">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/product.css">
 </head>
 
 <body>
@@ -27,9 +27,9 @@
 
         <!-- Navigation links -->
         <ul class="nav-links">
-            <li><a href="#home">Home</a></li>
+            <li><a href="/">Home</a></li>
+            <li><a href="products.html">Products</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -39,23 +39,77 @@
     <br><br>
     <div class="products">
         <div class="row product-row">
-            <div class="col-lg-4 p-0 cards">
+            <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/hand-pallet-truck.jpg" width="230px"
+                        <img src="assets/images/products/hand-pallet-truck.jpg" width="200px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Hand Pallet<br>Truck</h3>
                         <a href="" class="simple-button">Read More</a>
-                        <p class="weight"><span>Capacity :</span> 2000 Kgs, 2500Kgs, 3000Kgs & 5000Kgs</p>
+                        <p class="weight"><span>Capacity :</span> 2000 - 5000Kgs</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 p-0 cards">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/products/scale-pallet-truck.jpg" width="220px"
+                            alt="Material Handling Equipment">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="item-code">Scale Pallet Truck</h3>
+                        <a href="" class="simple-button">Read More</a>
+                        <p class="weight"><span>Capacity :</span> 2000 kg</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 p-0 cards">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/products/electric-pallet-truck.jpg" width="220px"
+                            alt="Material Handling Equipment">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="item-code">Electric Pallet Truck</h3>
+                        <a href="" class="simple-button">Read More</a>
+                        <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-lg-3 p-0 cards">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/products/high-lift-truck.jpg" width="220px"
+                            alt="Material Handling Equipment">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="item-code">High Lift<br>Truck</h3>
+                        <a href="" class="simple-button">Read More</a>
+                        <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row product-row">
+            <div class="col-lg-4 p-0 cards">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="assets/images/products/hand-pallet-truck.jpg" width="200px"
+                            alt="Material Handling Equipment">
+                    </div>
+                    <div class="product-details">
+                        <h3 class="item-code">Hand Pallet<br>Truck</h3>
+                        <a href="" class="simple-button">Read More</a>
+                        <p class="weight"><span>Capacity :</span> 2000 - 5000Kgs</p>
                     </div>
                 </div>
             </div>
             <div class="col-lg-4 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/scale-pallet-truck.jpg" width="250px"
+                        <img src="assets/images/products/scale-pallet-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
@@ -68,7 +122,7 @@
             <div class="col-lg-4 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/electric-pallet-truck.jpg" width="250px"
+                        <img src="assets/images/products/electric-pallet-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
@@ -78,7 +132,9 @@
                     </div>
                 </div>
             </div>
+            
         </div>
+        
 
     </div>
 
