--- a/products.html
+++ b/products.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="assets/css/headerfooter.css">
     <link rel="stylesheet" href="assets/css/responsivenavbar.css">
     <link rel="stylesheet" href="assets/css/product.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
+        </style>
 </head>
 
 <body>
