--- a/products.html
+++ b/products.html
@@ -9,6 +9,9 @@
     <link rel="stylesheet" href="assets/css/headerfooter.css">
     <link rel="stylesheet" href="assets/css/responsivenavbar.css">
     <link rel="stylesheet" href="assets/css/product.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+    integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
         </style>
@@ -94,8 +97,7 @@
                     </div>
                 </div>
             </div>
-        </div>
-        <div class="row product-row">
+        
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
@@ -213,6 +215,15 @@
         </div>
 
     </footer>
+
+    <script>
+        const menuIcon = document.querySelector('.menu-icon');
+        const navLinks = document.querySelector('.nav-links');
+    
+        menuIcon.addEventListener('click', () => {
+          navLinks.classList.toggle('active');
+        });
+      </script>
 </body>
 
 </html>
