--- a/products.html
+++ b/products.html
@@ -105,7 +105,7 @@
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
-                        <h3 class="item-code">Scissor Lift Table</h3>
+                        <h3 class="item-code">Scissor <br>Lift Table</h3>
                         <a href="" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
