--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
     </div>
     <div class="row" style="width: 80%;">
       <div class="col-lg-5" style="margin-top: 56px; color: white;">
-        <p class="m-0">Copyright © 2024 Ittehad logistics, All rights reserved.</p>
+        <p class="m-0">Copyright © 2024 M.I Trading, All rights reserved.</p>
       </div>
       <div class="col-lg-5"></div>
       <div class="col-lg-2"></div>
