--- a/products.html
+++ b/products.html
@@ -33,10 +33,10 @@
 
         <!-- Navigation links -->
         <ul class="nav-links">
-            <li><a href="/">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="products.html">Products</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#contact">Contact</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
@@ -208,7 +208,7 @@
         </div>
         <div class="row" style="width: 80%;">
             <div class="col-lg-5" style="margin-top: 56px; color: white;">
-                <p class="m-0">Copyright © 2024 Ittehad logistics, All rights reserved.</p>
+                <p class="m-0">Copyright © 2024 M.I Trading, All rights reserved.</p>
             </div>
             <div class="col-lg-5"></div>
             <div class="col-lg-2"></div>
