--- a/contact.html
+++ b/contact.html
@@ -45,6 +45,7 @@
         <div class="row">
             <h1 style="font-size: xxx-large;">Contact Us</h1>
         </div>
+        <form action="se"></form>
         <div class="row input-container">
             <div class="col-xs-12">
               <div class="styled-input wide">
@@ -71,9 +72,14 @@
               </div>
             </div>
             <div class="col-xs-12">
-              <div class="btn-lrg submit-btn">Send Message</div>
+              <button class="g-recaptcha submit-btn" 
+        data-sitekey="6LdArFEqAAAAAO7_bZvHntfU6XC_bPiEsJaQKHlf" 
+        data-callback='onSubmit' 
+        data-action='submit'
+        type="submit">Submit</button>
             </div>
         </div>
+      </form>
       </div>
       
       
