--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Hand Pallet<br>Truck</h3>
-            <a href="" class="simple-button">Read More</a>
+            <a href="products/hand-pallet-truck.html" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 2000 Kgs, 2500Kgs, 3000Kgs & 5000Kgs</p>
           </div>
         </div>
