--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 </div>
                 <div class="col-xs-12">
                     <button class="g-recaptcha submit-btn" 
-                            data-sitekey="6LdArFEqAAAAAO7_bZvHntfU6XC_bPiEsJaQKHlf" 
+                            data-sitekey="" 
                             data-callback="onSubmit" 
                             data-action="submit" 
                             type="submit">Submit</button>
