--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <!-- Navigation links -->
     <ul class="nav-links">
       <li><a href="#home">Home</a></li>
-      <li><a href="products.html">Products</a></li>
+      <li><a href="products/products.html">Products</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="contact.html">Contact</a></li>
     </ul>
@@ -72,7 +72,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Scale Pallet Truck</h3>
-            <a href="" class="simple-button">Read More</a>
+            <a href="products/scale-pallet-truck.html" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 2000 kg</p>
           </div>
         </div>
@@ -84,14 +84,14 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Electric Pallet Truck</h3>
-            <a href="" class="simple-button">Read More</a>
+            <a href="products/electric-pallet-truck.html" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
           </div>
         </div>
       </div>
     </div>
     <div class="btn-div">
-      <a href="products.html" class="stylish-button">View All</a>
+      <a href="products/products.html" class="stylish-button">View All</a>
 
     </div>
   </div>
