--- a/products/full-electric-stacker.html
+++ b/products/full-electric-stacker.html
@@ -35,9 +35,9 @@
 
   <main class="container">
     <div class="row">
-    <div class="col-md-6 left-column col-sm-12"><img src="../assets/images/products/hand-pallet-truck.jpg" alt="" width="500px"></div>
+    <div class="col-md-6 left-column col-sm-12"><img src="../assets/images/products/full-electric-stacker.jpg" alt="" width="500px"></div>
     <div class="col-md-6 right-column col-sm-12">
-      <h1 class="heading">Hand-Pallet Truck</h1>
+      <h1 class="heading">Full Electric Stacker</h1>
       <p class="paragraph"></p>
       <div class="line"></div>
       <a href="../contact.html" class="simple-button">Contact Us</a>
