--- a/products/products.html
+++ b/products/products.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="assets/css/bootstrap.css">
-    <link rel="stylesheet" href="assets/css/headerfooter.css">
-    <link rel="stylesheet" href="assets/css/responsivenavbar.css">
-    <link rel="stylesheet" href="assets/css/product.css">
+    <link rel="stylesheet" href="../assets/css/bootstrap.css">
+    <link rel="stylesheet" href="../assets/css/headerfooter.css">
+    <link rel="stylesheet" href="../assets/css/responsivenavbar.css">
+    <link rel="stylesheet" href="../assets/css/product.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
     integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
     crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -28,7 +28,7 @@
 
         <!-- Logo (on left for desktop, center for mobile) -->
         <div class="logo">
-            <img src="assets/images/LOGO/LOGO-01-02.png" alt="Logo" width="140px">
+            <img src="../assets/images/LOGO/LOGO-01-02.png" alt="Logo" width="140px">
         </div>
 
         <!-- Navigation links -->
@@ -48,12 +48,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/hand-pallet-truck.jpg" width="200px"
+                        <img src="../assets/images/products/hand-pallet-truck.jpg" width="200px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Hand Pallet<br>Truck</h3>
-                        <a href="products/hand-pallet-truck.html" class="simple-button">Read More</a>
+                        <a href="hand-pallet-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 2000 - 5000Kgs</p>
                     </div>
                 </div>
@@ -61,12 +61,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/scale-pallet-truck.jpg" width="220px"
+                        <img src="../assets/images/products/scale-pallet-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Scale Pallet Truck</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="scale-pallet-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 2000 kg</p>
                     </div>
                 </div>
@@ -74,12 +74,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/electric-pallet-truck.jpg" width="220px"
+                        <img src="../assets/images/products/electric-pallet-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Electric Pallet Truck</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="electric-pallet-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
                     </div>
                 </div>
@@ -87,12 +87,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/high-lift-truck.jpg" width="220px"
+                        <img src="../assets/images/products/high-lift-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">High Lift<br>Truck</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="high-lift-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -101,12 +101,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/scissor-lift-table.jpg" width="200px"
+                        <img src="../assets/images/products/scissor-lift-table.jpg" width="200px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Scissor <br>Lift Table</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="scissor-lift-table.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -114,12 +114,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/drum-manual-stacker.jpg" width="220px"
+                        <img src="../assets/images/products/drum-manual-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Drum Manual Stacker</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="drum-manual-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -127,12 +127,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/manual-stacker.jpg" width="220px"
+                        <img src="../assets/images/products/manual-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Manual Stacker</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="manual-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -140,12 +140,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/semi-electric-stacker.jpg" width="220px"
+                        <img src="../assets/images/products/semi-electric-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Semi Electric<br>Stacker</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="semi-electric-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -153,12 +153,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/full-electric-stacker.jpg" width="220px"
+                        <img src="../assets/images/products/full-electric-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Full Electric<br>Stacker</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="full-electric-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -166,12 +166,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="assets/images/products/reach-stacker.jpg" width="220px"
+                        <img src="../assets/images/products/reach-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Reach<br>Stacker</h3>
-                        <a href="" class="simple-button">Read More</a>
+                        <a href="reach-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -201,8 +201,8 @@
         <div class="orange-line"></div>
         <div class="footer-content row">
             <div class="footer-left col-lg-4">
-                <img src="assets/images/LOGO/LOGO-01-02.png" alt="" width="200px">
-                <img src="assets/images/qr-code/vcard-02.png" alt="" width="200px" class="qr-code">
+                <img src="../assets/images/LOGO/LOGO-01-02.png" alt="" width="200px">
+                <img src="../assets/images/qr-code/vcard-02.png" alt="" width="200px" class="qr-code">
             </div>
             <div class="footer-center col-lg-2">
                 <div class="separation-line"></div>
