--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="col-md-6 col-sm-12">
                     <div class="styled-input" style="float:right;">
-                        <input type="number" name="phone" required placeholder="Phone Number"/>
+                        <input type="text" name="phone" required placeholder="Phone Number"/>
                     </div>
                 </div>
                 <div class="col-xs-12">
