--- a/products/drum-manual-stacker.html
+++ b/products/drum-manual-stacker.html
@@ -28,16 +28,16 @@
         <ul class="nav-links">
             <li><a href="../index.html">Home</a></li>
             <li><a href="../products.html">Products</a></li>
-            <li><a href="../#about">About</a></li>
+            <li><a href="../about">About</a></li>
             <li><a href="../contact.html">Contact</a></li>
         </ul>
     </nav>
 
   <main class="container">
     <div class="row">
-    <div class="col-md-6 left-column col-sm-12"><img src="../assets/images/products/hand-pallet-truck.jpg" alt="" width="500px"></div>
+    <div class="col-md-6 left-column col-sm-12"><img src="../assets/images/products/drum-manual-stacker.jpg" alt="" width="500px"></div>
     <div class="col-md-6 right-column col-sm-12">
-      <h1 class="heading">Hand-Pallet Truck</h1>
+      <h1 class="heading">Drum Manual Stacker</h1>
       <p class="paragraph"></p>
       <div class="line"></div>
       <a href="../contact.html" class="simple-button">Contact Us</a>
