--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         <!-- Navigation links -->
         <ul class="nav-links">
           <li><a href="index.html">Home</a></li>
-          <li><a href="products.html">Products</a></li>
+          <li><a href="products/products.html">Products</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="contact.html">Contact</a></li>
         </ul>
