--- a/products.html
+++ b/products.html
@@ -48,12 +48,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/hand-pallet-truck.jpg" width="200px"
+                        <img src="assets/images/products/hand-pallet-truck.jpg" width="200px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Hand Pallet<br>Truck</h3>
-                        <a href="hand-pallet-truck.html" class="simple-button">Read More</a>
+                        <a href="products/hand-pallet-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 2000 - 5000Kgs</p>
                     </div>
                 </div>
@@ -61,12 +61,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/scale-pallet-truck.jpg" width="220px"
+                        <img src="assets/images/products/scale-pallet-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Scale Pallet Truck</h3>
-                        <a href="scale-pallet-truck.html" class="simple-button">Read More</a>
+                        <a href="products/scale-pallet-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 2000 kg</p>
                     </div>
                 </div>
@@ -74,12 +74,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/electric-pallet-truck.jpg" width="220px"
+                        <img src="assets/images/products/electric-pallet-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Electric Pallet Truck</h3>
-                        <a href="electric-pallet-truck.html" class="simple-button">Read More</a>
+                        <a href="products/electric-pallet-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
                     </div>
                 </div>
@@ -87,12 +87,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/high-lift-truck.jpg" width="220px"
+                        <img src="assets/images/products/high-lift-truck.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">High Lift<br>Truck</h3>
-                        <a href="high-lift-truck.html" class="simple-button">Read More</a>
+                        <a href="products/high-lift-truck.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -101,12 +101,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/scissor-lift-table.jpg" width="200px"
+                        <img src="assets/images/products/scissor-lift-table.jpg" width="200px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Scissor <br>Lift Table</h3>
-                        <a href="scissor-lift-table.html" class="simple-button">Read More</a>
+                        <a href="products/scissor-lift-table.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -114,12 +114,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/drum-manual-stacker.jpg" width="220px"
+                        <img src="assets/images/products/drum-manual-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Drum Manual Stacker</h3>
-                        <a href="drum-manual-stacker.html" class="simple-button">Read More</a>
+                        <a href="products/drum-manual-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -127,12 +127,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/manual-stacker.jpg" width="220px"
+                        <img src="assets/images/products/manual-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Manual Stacker</h3>
-                        <a href="manual-stacker.html" class="simple-button">Read More</a>
+                        <a href="products/manual-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -140,12 +140,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/semi-electric-stacker.jpg" width="220px"
+                        <img src="assets/images/products/semi-electric-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Semi Electric<br>Stacker</h3>
-                        <a href="semi-electric-stacker.html" class="simple-button">Read More</a>
+                        <a href="products/semi-electric-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -153,12 +153,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/full-electric-stacker.jpg" width="220px"
+                        <img src="assets/images/products/full-electric-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Full Electric<br>Stacker</h3>
-                        <a href="full-electric-stacker.html" class="simple-button">Read More</a>
+                        <a href="products/full-electric-stacker.htm/" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -166,12 +166,12 @@
             <div class="col-lg-3 p-0 cards">
                 <div class="product-card">
                     <div class="product-image">
-                        <img src="../assets/images/products/reach-stacker.jpg" width="220px"
+                        <img src="assets/images/products/reach-stacker.jpg" width="220px"
                             alt="Material Handling Equipment">
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Reach<br>Stacker</h3>
-                        <a href="reach-stacker.html" class="simple-button">Read More</a>
+                        <a href="products/reach-stacker.html" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
