--- a/products/drum-manual-stacker.html
+++ b/products/drum-manual-stacker.html
@@ -26,10 +26,10 @@
 
         <!-- Navigation links -->
         <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../products.html">Products</a></li>
-            <li><a href="../about">About</a></li>
-            <li><a href="../contact.html">Contact</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="products.html">Products</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 
