--- a/products.html
+++ b/products.html
@@ -28,7 +28,7 @@
 
         <!-- Logo (on left for desktop, center for mobile) -->
         <div class="logo">
-            <img src="../assets/images/LOGO/LOGO-01-02.png" alt="Logo" width="140px">
+            <img src="assets/images/LOGO/LOGO-01-02.png" alt="Logo" width="140px">
         </div>
 
         <!-- Navigation links -->
@@ -201,8 +201,8 @@
         <div class="orange-line"></div>
         <div class="footer-content row">
             <div class="footer-left col-lg-4">
-                <img src="../assets/images/LOGO/LOGO-01-02.png" alt="" width="200px">
-                <img src="../assets/images/qr-code/vcard-02.png" alt="" width="200px" class="qr-code">
+                <img src="assets/images/LOGO/LOGO-01-02.png" alt="" width="200px">
+                <img src="assets/images/qr-code/vcard-02.png" alt="" width="200px" class="qr-code">
             </div>
             <div class="footer-center col-lg-2">
                 <div class="separation-line"></div>
