--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <div class="btn-div">
-      <a href="products/products.html" class="stylish-button">View All</a>
+      <a href="products.html" class="stylish-button">View All</a>
 
     </div>
   </div>
