--- a/about.html
+++ b/about.html
@@ -5,7 +5,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/headerfooter.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
   <link rel="stylesheet" href="assets/css/responsivenavbar.css">
@@ -15,6 +14,7 @@
     <style>
       @import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&display=swap');
       </style>
+      <link rel="stylesheet" href="assets/css/about.css">
 </head>
 
 <body>
@@ -41,65 +41,22 @@
   </nav>
 
 
+  <main>
+    <div class="main row">
 
+        <h1 class="heading">About us</h1>
+<p class="paragraph">Founded in February 2024, M.I Trading specializes in providing high-quality material handling equipment designed to meet the diverse needs of businesses across various industries. As an authorized distributor of the renowned Xilin brand, we are proud to offer a trusted selection of material handling solutions known for their reliability and durability. Our mission is to streamline and support efficient operations by supplying equipment that enhances productivity and safety. <br><br>
 
-  <div class="welcome" style="display: flex; flex-direction: column;">
-    <h1>The Power Of <br> Movement</h1>
-    <p>Unmatched Handling Efficiency</p>
-  </div>
-  <br><br><br>
-
-  <h1 class="product-txt">Our Products</h1>
-  <br><br>
-  <div class="products">
-    <div class="row product-row">
-      <div class="col-lg-4 p-0 cards">
-        <div class="product-card">
-          <div class="product-image">
-            <img src="assets/images/products/hand-pallet-truck.jpg" width="230px" alt="Material Handling Equipment">
-          </div>
-          <div class="product-details">
-            <h3 class="item-code">Hand Pallet<br>Truck</h3>
-            <a href="products/hand-pallet-truck.html" class="simple-button">Read More</a>
-            <p class="weight"><span>Capacity :</span> 2000 Kgs, 2500Kgs, 3000Kgs & 5000Kgs</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 p-0 cards">
-        <div class="product-card">
-          <div class="product-image">
-            <img src="assets/images/products/scale-pallet-truck.jpg" width="250px" alt="Material Handling Equipment">
-          </div>
-          <div class="product-details">
-            <h3 class="item-code">Scale Pallet Truck</h3>
-            <a href="products/scale-pallet-truck.html" class="simple-button">Read More</a>
-            <p class="weight"><span>Capacity :</span> 2000 kg</p>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 p-0 cards">
-        <div class="product-card">
-          <div class="product-image">
-            <img src="assets/images/products/electric-pallet-truck.jpg" width="250px" alt="Material Handling Equipment">
-          </div>
-          <div class="product-details">
-            <h3 class="item-code">Electric Pallet Truck</h3>
-            <a href="products/electric-pallet-truck.html" class="simple-button">Read More</a>
-            <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
-          </div>
-        </div>
-      </div>
-    </div>
-    <div class="btn-div">
-      <a href="products.html" class="stylish-button">View All</a>
+    In addition to our wide range of Xilin products, M.I Trading provides expert repair services for all types of equipment. Our skilled technicians are capable of handling repairs for standard material handling equipment, and we also specialize in servicing all kinds of screw air compressors. We are committed to maintaining and restoring your equipment to peak performance, ensuring minimal downtime and maximum efficiency for your business. <br><br>
+    
+    At M.I Trading, we understand the demands of today’s fast-paced environments, and we are dedicated to delivering solutions that ensure smooth and secure handling of materials. Whether you're looking to improve logistics, reduce manual strain, or optimize your workspace, our equipment and repair services are crafted to make your operations seamless. <br><br>
+    
+    Trust M.I Trading to be your reliable partner for all your material handling and equipment repair needs.</p>
 
     </div>
-  </div>
+  </main>
 
-  <br><br><br><br><br><br>
-
-
-  <footer>
+<footer>
     <div class="black-line"></div>
     <div class="orange-line"></div>
     <div class="footer-content row">
