--- a/about.html
+++ b/about.html
@@ -43,7 +43,7 @@
 
   <main>
     <div class="main row">
-
+<div class="text">
         <h1 class="heading">About us</h1>
 <p class="paragraph">Founded in February 2024, M.I Trading specializes in providing high-quality material handling equipment designed to meet the diverse needs of businesses across various industries. As an authorized distributor of the renowned Xilin brand, we are proud to offer a trusted selection of material handling solutions known for their reliability and durability. Our mission is to streamline and support efficient operations by supplying equipment that enhances productivity and safety. <br><br>
 
@@ -52,7 +52,7 @@
     At M.I Trading, we understand the demands of today’s fast-paced environments, and we are dedicated to delivering solutions that ensure smooth and secure handling of materials. Whether you're looking to improve logistics, reduce manual strain, or optimize your workspace, our equipment and repair services are crafted to make your operations seamless. <br><br>
     
     Trust M.I Trading to be your reliable partner for all your material handling and equipment repair needs.</p>
-
+</div>
     </div>
   </main>
 
