--- a/index.html
+++ b/index.html
@@ -43,10 +43,22 @@
 
 
 
-  <div class="welcome" style="display: flex; flex-direction: column;">
-    <h1>The Power Of <br> Movement</h1>
-    <p>Unmatched Handling Efficiency</p>
+  <div class="welcome-wrapper">
+    <!-- Lazy-loading image with blur effect -->
+    <img
+      src="../../assets/images/main/istockphoto-915169344-2048x2048.jpg"
+      alt="Background"
+      loading="lazy"
+      class="background-image"
+    />
+  
+    <!-- Main content -->
+    <div class="welcome">
+      <h1>The Power Of <br> Movement</h1>
+      <p>Unmatched Handling Efficiency</p>
+    </div>
   </div>
+  
   <br><br><br>
 
   <h1 class="product-txt">Our Products</h1>
@@ -91,7 +103,7 @@
       </div>
     </div>
     <div class="btn-div">
-      <a href="products.html" class="stylish-button">View All</a>
+      <a href="product.html" class="stylish-button">View All</a>
 
     </div>
   </div>
