--- a/products/electric-pallet-truck.html
+++ b/products/electric-pallet-truck.html
@@ -14,27 +14,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-    <nav class="navbar">
-        <!-- Hamburger Menu on the left (only visible on mobile) -->
-        <div class="menu-icon">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
-        </div>
-
-        <!-- Logo (on left for desktop, center for mobile) -->
-        <div class="logo">
-            <img src="../assets/images/LOGO/LOGO-01-02.png" alt="Logo" width="140px">
-        </div>
-
-        <!-- Navigation links -->
-        <ul class="nav-links">
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="../product.html">Products</a></li>
-            <li><a href="../about.html">About</a></li>
-            <li><a href="../contact.html">Contact</a></li>
-        </ul>
-    </nav>
+    <div id="header" style="width: 100%;"></div>
 
   <main class="container">
     <div class="row">
@@ -48,52 +28,7 @@
   </div>
   </main>
   
-    <footer style="margin-top: 50px;">
-        <div class="black-line"></div>
-        <div class="orange-line"></div>
-        <div class="footer-content row">
-            <div class="footer-left col-lg-4">
-                <img src="../assets/images/LOGO/LOGO-01-02.png" alt="" width="200px">
-                <img src="../assets/images/qr-code/vcard-02.png" alt="" width="200px" class="qr-code">
-            </div>
-            <div class="footer-center col-lg-2">
-                <div class="separation-line"></div>
-            </div>
-            <div class="footer-right col-lg-5">
-                <div class="contact-container">
-                    <div class="contact-item">
-                        <i class="fas fa-phone"></i>
-                        <div class="contact-text">
-                            +92 332 5553860 <br>
-                            +92 3365553860
-                        </div>
-                    </div>
-
-                    <div class="contact-item">
-                        <i class="fas fa-envelope"></i>
-                        <div class="contact-text">
-                            info@mitrading.com.pk
-                        </div>
-                    </div>
-
-                    <div class="contact-item">
-                        <i class="fas fa-map-marker-alt"></i>
-                        <div class="contact-text">
-                            Plot # 48, Sector 24, Korangi Industrial Area, Karachi.
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row" style="width: 80%;">
-            <div class="col-lg-5" style="margin-top: 56px; color: white;">
-                <p class="m-0">Copyright © 2024 M.I Trading, All rights reserved.</p>
-            </div>
-            <div class="col-lg-5"></div>
-            <div class="col-lg-2"></div>
-        </div>
-
-    </footer>
+  <div id="footer" style="width: 100%;"></div>  
     <script>
         // Load the header and footer content
         fetch("header.html")
