--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
   </div>
 
   <br><br><br><br><br><br>
-
+<div id="footer" style="width: 100%;"></div>
   <script>
     // Load the header and footer content
     fetch("header.html")
