--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <div class="welcome-wrapper">
     <!-- Lazy-loading image with blur effect -->
     <img
-      src="assets/images/main/istockphoto-915169344-2048x2048.jpg"
+      src="assets/images/main/new..jpg"
       alt="Background"
       loading="lazy"
       class="background-image"
