--- a/contact.html
+++ b/contact.html
@@ -111,6 +111,8 @@
     return true; // Ensure it returns true to submit the form
   }
 </script>
+<script src="disable.js"></script>
+
 
 </body>
 </html>
