--- a/index.html
+++ b/index.html
@@ -112,6 +112,8 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>
+<script src="disable.js"></script>
+
 
 </body>
 
