--- a/product.html
+++ b/product.html
@@ -209,7 +209,8 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>
-     
+     <script src="disable.js"></script>
+
 
 </body>
 
