--- a/products/scale-pallet-truck.html
+++ b/products/scale-pallet-truck.html
@@ -52,5 +52,8 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>
+
+<script src="disable.js"></script>
+
 </body>
 </html>
