--- a/products/drum-manual-stacker.html
+++ b/products/drum-manual-stacker.html
@@ -73,6 +73,7 @@
             document.getElementById("footer").innerHTML = data;
           });
       </script>
+<script src="disable.js"></script>
 
 
 </body>
