--- a/products/full-electric-stacker.html
+++ b/products/full-electric-stacker.html
@@ -51,6 +51,8 @@
             document.getElementById("footer").innerHTML = data;
           });
       </script>
+      <script src="disable.js"></script>
+
       
 </body>
 </html>
