--- a/products/hand-pallet-truck.html
+++ b/products/hand-pallet-truck.html
@@ -51,5 +51,7 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>
+  <script src="disable.js"></script>
+
 </body>
 </html>
