--- a/products/high-lift-truck.html
+++ b/products/high-lift-truck.html
@@ -52,5 +52,7 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>
+  <script src="disable.js"></script>
+
 </body>
 </html>
