--- a/products/scissor-lift-table.html
+++ b/products/scissor-lift-table.html
@@ -54,5 +54,7 @@
         document.getElementById("footer").innerHTML = data;
       });
   </script>
+  <script src="disable.js"></script>
+
 </body>
 </html>
