--- a/contact.html
+++ b/contact.html
@@ -53,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-xs-12">
-                    <button class="g-recaptcha submit-btn" 
+                    <button class="g-recaptcha stylish-button" 
                             data-sitekey="" 
                             data-callback="onSubmit" 
                             data-action="submit" 
