--- a/products/scissor-lift-table.html
+++ b/products/scissor-lift-table.html
@@ -26,6 +26,11 @@
       <a href="../contact.html" class="simple-button">Contact Us</a>
     </div>
   </div>
+  <br><br><br><br><br><br><br><br><br><br>
+  <div class="dimention-drawing">
+    <h1 class="heading" style="font-size: 40px; ">Dimention Drawing</h1>
+    <img src="../assets/images/products/dimention-drawing/scissor-lift-table.jpg" alt="" width="100%">
+  </div>
   </main>
 
 
