--- a/products/semi-electric-stacker.html
+++ b/products/semi-electric-stacker.html
@@ -32,6 +32,11 @@
     </div>
   </div>
   </main>
+  <br><br><br><br><br><br><br><br><br><br>
+  <div class="dimention-drawing">
+    <h1 class="heading" style="font-size: 40px; ">Dimention Drawing</h1>
+    <img src="../assets/images/products/dimention-drawing/semi-electric-stacker.jpg" alt="" width="100%">
+  </div>
   <div id="footer" style="width: 100%;"></div>
 
 <script>
