--- a/products/drum-manual-stacker.html
+++ b/products/drum-manual-stacker.html
@@ -46,6 +46,12 @@
       <a href="../contact.html" class="simple-button">Contact Us</a>
     </div>
   </div>
+
+  <br><br><br><br><br><br><br><br><br><br>
+  <div class="dimention-drawing">
+    <h1 class="heading" style="font-size: 40px; ">Dimention Drawing</h1>
+    <img src="../assets/images/products/dimention-drawing/drum-manual-stacker.jpg" alt="" width="100%">
+  </div>
   </main>
   
   <div id="footer" style="width: 100%;"></div>  
