--- a/products/hand-pallet-truck.html
+++ b/products/hand-pallet-truck.html
@@ -20,11 +20,17 @@
     <div class="row">
     <div class="col-md-6 left-column col-sm-12"><img src="../assets/images/products/hand-pallet-truck.jpg" alt="" width="500px"></div>
     <div class="col-md-6 right-column col-sm-12">
-      <h1 class="heading">Hand-Pallet Truck</h1>
+      <h1 class="heading">Hand Pallet Truck</h1>
       <p class="paragraph"></p>
       <div class="line"></div>
       <a href="../contact.html" class="simple-button">Contact Us</a>
     </div>
+  </div>
+
+  <br><br><br><br><br><br><br><br><br><br>
+  <div class="dimention-drawing">
+    <h1 class="heading" style="font-size: 40px; ">Dimention Drawing</h1>
+    <img src="../assets/images/products/dimention-drawing/hand-pallet-truck.jpg" alt="" width="100%">
   </div>
   </main>
   <div id="footer" style="width: 100%;"></div>
