--- a/product.html
+++ b/product.html
@@ -105,7 +105,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Drum Manual Stacker</h3>
-                        <a href="products/drum-manual-stacker.html" class="simple-button">Read More</a>
+                        <a href="products/drum-manual-stacker.php" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
