--- a/products/header.html
+++ b/products/header.html
@@ -1,21 +1,23 @@
 <nav class="navbar">
-    <!-- Hamburger Menu on the left (only visible on mobile) -->
-    <div class="menu-icon">
-      <span class="bar"></span>
-      <span class="bar"></span>
-      <span class="bar"></span>
-    </div>
+  <!-- Hamburger Menu on the left (only visible on mobile) -->
+  <div class="menu-icon">
+    <span class="bar"></span>
+    <span class="bar"></span>
+    <span class="bar"></span>
+  </div>
 
-    <!-- Logo (on left for desktop, center for mobile) -->
-    <div class="logo">
+  <!-- Logo (on left for desktop, center for mobile) -->
+  <div class="logo">
+    <a href="/">
       <img src="../assets/images/LOGO/LOGO-01-02.png" alt="Logo" width="140px">
-    </div>
+    </a>
+  </div>
 
-    <!-- Navigation links -->
-    <ul class="nav-links">
-      <li><a href="../index.html">Home</a></li>
-      <li><a href="../product.html">Products</a></li>
-      <li><a href="../about.html">About</a></li>
-      <li><a href="../contact.html">Contact</a></li>
-    </ul>
-  </nav>
+  <!-- Navigation links -->
+  <ul class="nav-links">
+    <li><a href="index.html">Home</a></li>
+    <li><a href="product.html">Products</a></li>
+    <li><a href="about.html">About</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+</nav>
