--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Hand Pallet<br>Truck</h3>
-            <a href="products/hand-pallet-truck.html" class="simple-button">Read More</a>
+            <a href="products/hand-pallet-truck.php" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 2000 Kgs, 2500Kgs, 3000Kgs & 5000Kgs</p>
           </div>
         </div>
@@ -64,7 +64,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Scale Pallet Truck</h3>
-            <a href="products/scale-pallet-truck.html" class="simple-button">Read More</a>
+            <a href="products/scale-pallet-truck.php" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 2000 kg</p>
           </div>
         </div>
@@ -76,7 +76,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Electric Pallet Truck</h3>
-            <a href="products/electric-pallet-truck.html" class="simple-button">Read More</a>
+            <a href="products/electric-pallet-truck.php" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
           </div>
         </div>
@@ -91,13 +91,11 @@
   <br><br><br><br><br><br>
 <div id="footer" style="width: 100%;"></div>
   <script>
-    // Load the header and footer content
     fetch("header.html")
       .then(response => response.text())
       .then(data => {
         document.getElementById("header").innerHTML = data;
 
-        // Initialize hamburger menu event listener after header is loaded
         const menuIcon = document.querySelector('.menu-icon');
         const navLinks = document.querySelector('.nav-links');
 
