--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Electric Pallet Truck</h3>
-            <a href="products/electric-pallet-truck.php" class="simple-button">Read More</a>
+            <a href="products/electric-pallet-truck" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
           </div>
         </div>
@@ -116,3 +116,6 @@
 </body>
 
 </html>
+
+
+
