--- a/product.html
+++ b/product.html
@@ -39,7 +39,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Hand Pallet<br>Truck</h3>
-                        <a href="products/hand-pallet-truck.php" class="simple-button">Read More</a>
+                        <a href="products/hand-pallet-truck" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 2000 - 5000Kgs</p>
                     </div>
                 </div>
@@ -52,7 +52,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Scale Pallet Truck</h3>
-                        <a href="products/scale-pallet-truck.php" class="simple-button">Read More</a>
+                        <a href="products/scale-pallet-truck" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 2000 kg</p>
                     </div>
                 </div>
@@ -65,7 +65,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Electric Pallet Truck</h3>
-                        <a href="products/electric-pallet-truck.php" class="simple-button">Read More</a>
+                        <a href="products/electric-pallet-truck" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
                     </div>
                 </div>
@@ -78,7 +78,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">High Lift<br>Truck</h3>
-                        <a href="products/high-lift-truck.php" class="simple-button">Read More</a>
+                        <a href="products/high-lift-truck" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Scissor <br>Lift Table</h3>
-                        <a href="products/scissor-lift-table.php" class="simple-button">Read More</a>
+                        <a href="products/scissor-lift-table" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -105,7 +105,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Drum Manual Stacker</h3>
-                        <a href="products/drum-manual-stacker.php" class="simple-button">Read More</a>
+                        <a href="products/drum-manual-stacker" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -118,7 +118,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Manual Stacker</h3>
-                        <a href="products/manual-stacker.php" class="simple-button">Read More</a>
+                        <a href="products/manual-stacker" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -131,7 +131,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Semi Electric<br>Stacker</h3>
-                        <a href="products/semi-electric-stacker.php" class="simple-button">Read More</a>
+                        <a href="products/semi-electric-stacker" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -144,7 +144,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Full Electric<br>Stacker</h3>
-                        <a href="products/full-electric-stacker.php" class="simple-button">Read More</a>
+                        <a href="products/full-electric-stacker" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                     </div>
                     <div class="product-details">
                         <h3 class="item-code">Reach<br>Stacker</h3>
-                        <a href="products/reach-stacker.php" class="simple-button">Read More</a>
+                        <a href="products/reach-stacker" class="simple-button">Read More</a>
                         <p class="weight"><span>Capacity :</span> N/A</p>
                     </div>
                 </div>
