--- a/header.html
+++ b/header.html
@@ -15,9 +15,9 @@
 
   <!-- Navigation links -->
   <ul class="nav-links">
-    <li><a href="index.html">Home</a></li>
-    <li><a href="product.html">Products</a></li>
-    <li><a href="about.html">About</a></li>
-    <li><a href="contact.html">Contact</a></li>
+    <li><a href="/">Home</a></li>
+    <li><a href="product">Products</a></li>
+    <li><a href="about">About</a></li>
+    <li><a href="contact">Contact</a></li>
   </ul>
 </nav>
