--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <base href="">
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/headerfooter.css">
   <link rel="stylesheet" href="assets/css/bootstrap.css">
@@ -52,7 +53,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Hand Pallet<br>Truck</h3>
-            <a href="products/hand-pallet-truck.php" class="simple-button">Read More</a>
+            <a href="products/hand-pallet-truck" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 2000 Kgs, 2500Kgs, 3000Kgs & 5000Kgs</p>
           </div>
         </div>
@@ -64,7 +65,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Scale Pallet Truck</h3>
-            <a href="products/scale-pallet-truck.php" class="simple-button">Read More</a>
+            <a href="products/scale-pallet-truck" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 2000 kg</p>
           </div>
         </div>
@@ -76,7 +77,7 @@
           </div>
           <div class="product-details">
             <h3 class="item-code">Electric Pallet Truck</h3>
-            <a href="products/electric-pallet-truck.php" class="simple-button">Read More</a>
+            <a href="products/electric-pallet-truck" class="simple-button">Read More</a>
             <p class="weight"><span>Capacity :</span> 1500 - 2000Kgs</p>
           </div>
         </div>
